- Adicionando validação com fixture - Implementando autenticação - Adicionando autenticação para external e controller - Implementando a geração de relatório com mochawesome
