# app.js
@@ -5,6 +5,8 @@ const transferController = require('./controller/transferController');
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('./swagger.json');
 
+const authenticateJWT = require('./middleware/authenticateJWT');
+
 const app = express();
 app.use(express.json());
 
@@ -14,8 +16,8 @@ app.post('/login', userController.login);
 app.get('/users', userController.getUsers);
 
 // Rotas de transferência
-app.post('/transfer', transferController.transfer);
-app.get('/transfers', transferController.getTransfers);
+app.post('/transfer', authenticateJWT, transferController.transfer);
+app.get('/transfers', authenticateJWT, transferController.getTransfers);
 
 // Swagger
 app.use('/api-docs', swaggerUi.serve, swaggerUi.setup(swaggerDocument));
