# swagger.json
@@ -5,6 +5,15 @@
 		"version": "1.0.0",
 		"description": "API para login, registro, consulta de usuários e transferências."
 	},
+	"components": {
+		"securitySchemes": {
+			"bearerAuth": {
+				"type": "http",
+				"scheme": "bearer",
+				"bearerFormat": "JWT"
+			}
+		}
+	},
 	"paths": {
 		"/register": {
 			"post": {
@@ -68,6 +77,7 @@
 		"/transfer": {
 			"post": {
 				"summary": "Realizar transferência",
+		  "security": [{ "bearerAuth": [] }],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -93,6 +103,7 @@
 		"/transfers": {
 			"get": {
 				"summary": "Listar transferências",
+		  "security": [{ "bearerAuth": [] }],
 				"responses": {
 					"200": { "description": "Lista de transferências" }
 				}
